--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "sparkcss",
   "version": "1.0.0",
   "main": "index.js",
+  "bin": {
+    "sparkcss": "dist/cli.js"
+  },
   "directories": {
     "doc": "docs",
     "test": "tests"
@@ -14,7 +17,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "A custom css preprocessor",
   "devDependencies": {
     "@types/jest": "^29.5.14",
     "jest": "^29.7.0",
