--- a/.npmignore
+++ b/.npmignore
@@ -1,3 +1,14 @@
+# Development Modules
 src/
 tests/
 .git/
+.tours/
+
+# Ignore node modules
+node_modules/
+
+# Ignore development configuration files
+tsconfig.json
+.vscode/
+.eslintrc
+.prettierrc
