--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.3.0",
   "main": "index.js",
   "bin": {
-    "sparkup": "./dist/cli/cli.js"
+    "sparky": "./dist/cli/cli.js"
   },
   "directories": {
     "doc": "docs",
@@ -14,7 +14,7 @@
     "start": "ts-node src/cli/cli.ts",
     "test:watch": "jest --watch",
     "build": "rm -rf dist && tsc",
-    "build:styles": "sparkup src/styles/input.spark -o dist/styles.css",
+    "build:styles": "sparky src/styles/input.spark -o dist/styles.css",
     "build:utility": "ts-node ./src/utilClasses/generateUtilities.ts"
   },
   "files": [
