--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,6 @@
     "rootDir": "./src",
     "resolveJsonModule": true,
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "config/**/*"],
   "exclude": ["tests"]
 }
