--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "1.3.0",
   "main": "index.js",
   "bin": {
-    "sparky": "./dist/cli/cli.js"
+    "sparky": "./dist/cli/cli.js",
+    "spark-utils": "./bin/utilities.js"
   },
   "directories": {
     "doc": "docs",
@@ -14,13 +15,12 @@
     "start": "ts-node src/cli/cli.ts",
     "test:watch": "jest --watch",
     "build": "rm -rf dist && tsc",
-    "build:styles": "sparky src/styles/input.spark -o dist/styles.css",
-    "build:utility": "ts-node ./src/utilClasses/generateUtilities.ts"
+    "build:styles": "sparky src/styles/input.spark -o dist/styles.css"
   },
   "files": [
     "dist/",
-    "sparkcss-utilities.css",
-    "src/"
+    "src/",
+    "bin/"
   ],
   "keywords": [],
   "author": "Nathaniel Paz (n8.jsx)",
@@ -34,6 +34,7 @@
     "typescript": "^5.6.3"
   },
   "dependencies": {
+    "commander": "^12.1.0",
     "mdn-data": "^2.12.2"
   }
 }
