--- a/src/config/spark.config.json
+++ b/src/config/spark.config.json
@@ -155,24 +155,6 @@
     }
   },
 
-  "grid": {
-    "columns": {
-      "1": "repeat(1, 1fr)",
-      "2": "repeat(2, 1fr)",
-      "3": "repeat(3, 1fr)",
-      "4": "repeat(4, 1fr)",
-      "6": "repeat(6, 1fr)",
-      "12": "repeat(12, 1fr)"
-    },
-    "gap": {
-      "xs": "4px",
-      "sm": "8px",
-      "md": "16px",
-      "lg": "32px",
-      "xl": "48px"
-    }
-  },
-
   "display": {
     "flex": {
       "direction": {
@@ -180,6 +162,9 @@
         "rReverse": "row-reverse",
         "col": "column",
         "cReverse": "column-reverse"
+      },
+      "display": {
+        "": "flex"
       },
       "justifyContent": {
         "start": "flex-start",
@@ -212,53 +197,71 @@
         "shrink-none": "0",
         "shrink": "1"
       }
+    },
+    "grid": {
+      "columns": {
+        "1": "repeat(1, 1fr)",
+        "2": "repeat(2, 1fr)",
+        "3": "repeat(3, 1fr)",
+        "4": "repeat(4, 1fr)",
+        "6": "repeat(6, 1fr)",
+        "12": "repeat(12, 1fr)"
+      },
+      "row": {
+        "1": "repeat(1, 1fr)",
+        "2": "repeat(2, 1fr)",
+        "3": "repeat(3, 1fr)",
+        "4": "repeat(4, 1fr)",
+        "6": "repeat(6, 1fr)",
+        "12": "repeat(12, 1fr)"
+      },
+      "gap": {
+        "xs": "4px",
+        "sm": "8px",
+        "md": "16px",
+        "lg": "32px",
+        "xl": "48px"
+      },
+      "display": {
+        "": "grid"
+      }
     }
   },
 
-  "animations": {
-    "fadeIn": "fade-in 0.5s ease-in-out",
-    "fadeOut": "fade-out 0.5s ease-in-out",
-    "bounce": "bounce 1s infinite",
-    "spin": "spin 1s linear infinite"
-  },
+  "transform": {
+    "animations": {
+      "fadeIn": "fade-in 0.5s ease-in-out",
+      "fadeOut": "fade-out 0.5s ease-in-out",
+      "bounce": "bounce 1s infinite",
+      "spin": "spin 1s linear infinite"
+    },
 
-  "transitions": {
-    "default": "all 0.3s ease",
-    "slow": "all 0.5s ease-in-out",
-    "fast": "all 0.15s ease-out",
-    "colors": "color 0.3s ease",
-    "opacity": "opacity 0.3s ease"
-  },
+    "transitions": {
+      "default": "all 0.3s ease",
+      "slow": "all 0.5s ease-in-out",
+      "fast": "all 0.15s ease-out",
+      "colors": "color 0.3s ease",
+      "opacity": "opacity 0.3s ease"
+    },
 
-  "shadows": {
-    "none": "none",
-    "sm": "0px 1px 2px rgba(0,0,0,0.1)",
-    "md": "0px 4px 6px rgba(0,0,0,0.1)",
-    "lg": "0px 10px 15px rgba(0,0,0,0.15)",
-    "xl": "0px 20px 25px rgba(0,0,0,0.2)",
-    "2xl": "0px 25px 50px rgba(0,0,0,0.25)"
-  },
+    "shadows": {
+      "none": "none",
+      "sm": "0px 1px 2px rgba(0,0,0,0.1)",
+      "md": "0px 4px 6px rgba(0,0,0,0.1)",
+      "lg": "0px 10px 15px rgba(0,0,0,0.15)",
+      "xl": "0px 20px 25px rgba(0,0,0,0.2)",
+      "2xl": "0px 25px 50px rgba(0,0,0,0.25)"
+    },
 
-  "zIndex": {
-    "auto": "auto",
-    "0": "0",
-    "10": "10",
-    "20": "20",
-    "30": "30",
-    "40": "40",
-    "50": "50",
-    "100": "100",
-    "above": "999"
-  },
-
-  "opacity": {
-    "0": "0",
-    "10": "0.1",
-    "25": "0.25",
-    "50": "0.5",
-    "75": "0.75",
-    "90": "0.9",
-    "100": "1"
+    "opacity": {
+      "0": "0",
+      "10": "0.1",
+      "25": "0.25",
+      "50": "0.5",
+      "75": "0.75",
+      "90": "0.9",
+      "100": "1"
+    }
   },
 
   "positioning": {
@@ -283,22 +286,27 @@
     "left": {
       "0": "0",
       "auto": "auto"
+    },
+    "zIndex": {
+      "auto": "auto",
+      "0": "0",
+      "10": "10",
+      "20": "20",
+      "30": "30",
+      "40": "40",
+      "50": "50",
+      "100": "100",
+      "above": "999"
     }
   },
 
   "utilities": {
     "typography": false,
     "boxModel": false,
-    "display": true,
-    "flex": false,
-    "grid": false,
+    "display": false,
     "spacing": false,
     "colors": false,
-    "animations": false,
-    "transitions": false,
-    "shadows": false,
-    "zIndex": false,
-    "opacity": false,
+    "transform": true,
     "positioning": false
   },
 
